# open-protocol-device-simulator

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  config.example.toml  package-lock.json
.github/workflows/: frontend.yml  rust.yml
docs/: multi-device-simulation.md  multi-spindle-brd-tdd.md
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: app.css  app.css.bak  app.html
frontend/src/lib/api/: client.ts
frontend/src/lib/config/: constants.ts  env.ts
frontend/src/routes/: +layout.svelte  +page.svelte
src/: batch_manager.rs  device_fsm.rs  events.rs  failure_simulator.rs  http_server.rs  lib.rs  main.rs  multi_spindle.rs  observable_state.rs  pset.rs  session.rs  state.rs  subscriptions.rs  tightening_tracker.rs
src/codec/: mod.rs  null_delimited_codec.rs
src/config/: cli.rs  mod.rs  settings.rs
src/handler/: batch_increment.rs  batch_reset.rs  batch_size.rs  communication_start.rs  communication_stop.rs  keep_alive.rs  mod.rs  multi_spindle_result_ack.rs  multi_spindle_result_subscribe.rs  multi_spindle_result_unsubscribe.rs  multi_spindle_status_ack.rs  multi_spindle_status_subscribe.rs  multi_spindle_status_unsubscribe.rs  pset_select.rs  pset_subscription.rs  pset_unsubscribe.rs  tightening_result_ack.rs  tightening_result_subscription.rs  tightening_result_unsubscribe.rs  tool_disable.rs  tool_enable.rs  vehicle_id.rs  vehicle_id_ack.rs  vehicle_id_download.rs  vehicle_id_subscription.rs  vehicle_id_unsubscribe.rs
src/handler/data/: command_accepted.rs  communication_start.rs  error_response.rs  mod.rs  multi_spindle_result_broadcast.rs  multi_spindle_status_broadcast.rs  pset_selected.rs  tightening_result.rs  vehicle_id_broadcast.rs
src/protocol/: field.rs  mod.rs  parser.rs  response_data.rs  serializer.rs
tests/: http_api_test.rs  http_endpoints_test.rs  tcp_protocol_test.rs
tests/common/: mod.rs  protocol_helpers.rs
(+71 files in other folders)
