[package]
name = "open-protocol-device-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = "0.4.42"
futures-util = { version = "0.3.31", features = ["sink"] }
serde = { version = "1.0.228", features = ["std", "derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
tower = "0.5.2"

[dev-dependencies]
http-body-util = "0.1"
