[package]
name = "open-protocol-device-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
chrono = "0.4.42"
futures-util = { version = "0.3.31", features = ["sink"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["std", "derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }

[dev-dependencies]
http-body-util = "0.1"
