[package]
name = "open-protocol-device-simulator"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
chrono = "0.4.42"
futures-util = { version = "0.3.31", features = ["sink"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rand = "0.9.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["std", "derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors"] }

[dev-dependencies]
http-body-util = "0.1.3"
